--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tally",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://dlwalsh.github.io/tally",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
@@ -13,6 +14,8 @@
     "slugify": "^1.3.4"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -28,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-config-airbnb": "^17.1.0"
+    "eslint-config-airbnb": "^17.1.0",
+    "gh-pages": "^2.0.1"
   }
 }
