--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tally",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dlwalsh.github.io/tally",
+  "homepage": "//dlwalsh.github.io/tally",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
