--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "object-curly-newline": "off",
     "quotes": ["error", "double"],
     "react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
-    "react/jsx-one-expression-per-line": "off"
+    "react/jsx-one-expression-per-line": "off",
+    "react/prop-types": "off",
   }
 }
